--- a/index.html
+++ b/index.html
@@ -83,87 +83,103 @@ button:hover {
   min-height: 50px;
 }
 
-  </style>
-  <style>
-    /* styles.css */
+/* Add navbar styles */
+.navbar {
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem 2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 20px;
-    }
+.nav-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #4facfe;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
-    .container {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-      text-align: center;
-      width: 100%;
-      max-width: 400px;
-      transition: transform 0.3s ease;
-    }
+.nav-links {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
 
-    .container:hover {
-      transform: scale(1.02);
-    }
+.nav-link {
+  color: #333;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+}
 
-    h1 {
-      margin-bottom: 20px;
-      font-size: 24px;
-      color: #333;
-    }
+.nav-link:hover {
+  color: #4facfe;
+  background: rgba(79, 172, 254, 0.1);
+}
 
-    input[type="number"] {
-      width: 100%;
-      padding: 15px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      font-size: 16px;
-      transition: border 0.3s ease;
-    }
+/* Adjust body padding to account for fixed navbar */
+body {
+  padding-top: 80px;
+}
 
-    input[type="number"]:focus {
-      border: 1px solid #4facfe;
-      outline: none;
-    }
+/* Mobile responsive menu */
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
 
-    button {
-      padding: 12px 20px;
-      margin: 5px;
-      background: #4facfe;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
 
-    button:hover {
-      background: #00f2fe;
-      transform: translateY(-2px);
-    }
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    flex-direction: column;
+    padding: 1rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
 
-    .result {
-      margin-top: 20px;
-      font-size: 18px;
-      color: #333;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      background: #f9f9f9;
-      min-height: 50px;
-    }
+  .nav-links.active {
+    display: flex;
+  }
+}
   </style>
 </head>
 <body>
+  <nav class="navbar">
+    <a href="#" class="nav-brand">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+      </svg>
+      Number Converter
+    </a>
+    <div class="menu-toggle">☰</div>
+    <div class="nav-links">
+      <a href="#" class="nav-link">Home</a>
+      <a href="#" class="nav-link">About</a>
+      <a href="#" class="nav-link">Contact</a>
+    </div>
+  </nav>
+
   <div class="container">
     <h1>Number to Words Converter</h1>
     <input type="number" id="numberInput" placeholder="Enter a number" min="0">
@@ -210,6 +226,21 @@ convertButton.addEventListener('click', () => {
   } else {
     const words = convertNumberToWords(number);
     resultDiv.innerText = words;
+  }
+});
+
+// Mobile menu toggle
+const menuToggle = document.querySelector('.menu-toggle');
+const navLinks = document.querySelector('.nav-links');
+
+menuToggle.addEventListener('click', () => {
+  navLinks.classList.toggle('active');
+});
+
+// Close mobile menu when clicking outside
+document.addEventListener('click', (e) => {
+  if (!e.target.closest('.navbar')) {
+    navLinks.classList.remove('active');
   }
 });
 </script>
