Schema Markup added
Schema Markup added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
   <meta name="keywords" content="number to words, number converter, convert numbers, words converter">
   <meta name="author" content="Your Name">
   <link rel="stylesheet" href="styles.css">
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Number to Words Converter",
+    "url": "https://numberconverter.com",
+    "description": "Convert numbers to words easily with our Number to Words Converter. Enter a number and get the corresponding words instantly.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://numberconverter.com/?search={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Number to Words Converter",
+    "description": "A tool to convert numbers into words easily and quickly.",
+    "url": "https://numberconverter.com/number-to-words-converter",
+    "mainEntity": {
+      "@type": "WebApplication",
+      "name": "Number to Words Converter",
+      "applicationCategory": "Utility",
+      "operatingSystem": "All",
+      "url": "https://numberconverter.com/number-to-words-converter"
+    }
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar" role="navigation" aria-label="Main Navigation">
