--- a/index.html
+++ b/index.html
@@ -161,6 +161,25 @@ body {
     display: flex;
   }
 }
+    footer {
+  background: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
+  border-top: 1px solid #ddd;
+  margin-top: 20px;
+}
+
+footer a {
+  color: #4facfe;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
   </style>
 </head>
 <body>
