--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 20px;
+  flex-direction: column;
 }
 
 .container {
@@ -28,6 +29,7 @@ body {
   width: 100%;
   max-width: 400px;
   transition: transform 0.3s ease;
+  margin-top: 60px; /* Offset for navbar */
 }
 
 .container:hover {
@@ -83,7 +85,28 @@ button:hover {
   min-height: 50px;
 }
 
-/* Add navbar styles */
+/* Footer styles */
+footer {
+  background: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
+  border-top: 1px solid #ddd;
+  margin-top: 20px;
+}
+
+footer a {
+  color: #4facfe;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+/* Navbar styles */
 .navbar {
   background: rgba(255, 255, 255, 0.95);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -128,12 +151,10 @@ button:hover {
   background: rgba(79, 172, 254, 0.1);
 }
 
-/* Adjust body padding to account for fixed navbar */
 body {
   padding-top: 80px;
 }
 
-/* Mobile responsive menu */
 .menu-toggle {
   display: none;
   cursor: pointer;
@@ -161,25 +182,6 @@ body {
     display: flex;
   }
 }
-    footer {
-  background: rgba(255, 255, 255, 0.8);
-  padding: 1rem;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
-  color: #666;
-  border-top: 1px solid #ddd;
-  margin-top: 20px;
-}
-
-footer a {
-  color: #4facfe;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
   </style>
 </head>
 <body>
@@ -206,6 +208,10 @@ footer a:hover {
     <div id="result" class="result"></div>
   </div>
   
+  <footer>
+    <p>&copy; 2024 Number Converter. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 <script>
@@ -260,7 +266,4 @@ menuToggle.addEventListener('click', () => {
 document.addEventListener('click', (e) => {
   if (!e.target.closest('.navbar')) {
     navLinks.classList.remove('active');
-  }
-});
-</script>
-</html>
+ 
