Update index.html file
added code

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body {
   max-width: 400px;
   transition: transform 0.3s ease;
   margin-top: 60px; /* Offset for navbar */
+  background-color: rgb(219, 132, 239);
 }
 
 .container:hover {
